<resources>
    <string name="app_name">DRAWER</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="take_photo_string">NEW PHOTO</string>
    <string name="choose_photo_string">CHOOSE PHOTO</string>
    <string name="_string">TEMP STRING</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="camera_view_content">camera view content</string>
    <string name="onLongClick_gallery_button_string">Choose from gallery</string>
    <string name="onLongClick_camera_button_string">Make new</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="back">Back</string>
    <string name="take">Take</string>
    <string name="edit">Edit</string>
    <string name="load">Load</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="load_draft">LOAD DRAFT</string>
    <string name="draft_loading_string">Load draft - last edited photo</string>
    <string name="sock_images_button_info">Search for inspirations</string>
    <string name="search_for_inspiration">SEARCH FOR INSPIRATION</string>
    <string name="photographer">photographer</string>
    <string name="niblack_string">NIBLACK</string>
    <string name="sauvola_string">SAUVOLA</string>
    <string name="sharpen_string">SHARPEN</string>
    <string name="median_string">MEDIAN</string>
    <string name="greyscale_string">GREYSCALE</string>
    <string name="pixelize_string">PIXELIZE</string>
    <string name="logo_image">LOGO IMAGE</string>
    <string name="quack">Quack!!!</string>
    <string name="main_activity_string1">You\'ve got new drawing? I have nice filters. Check NEW PHOTO or CHOOSE PHOTO from your gallery.</string>
    <string name="main_activity_string2">Don\'t know what to draw? How about ... SEARCH FOR INSPIRATION?</string>
    <string name="main_activity_string3">Do you have any unfinished drafts? Lets check, LOAD DRAFT.</string>
    <string name="edit_activity_string1">Try filters. They are awesome.</string>
    <string name="edit_activity_string2">How about grayscale?</string>
    <string name="edit_activity_string3">Add grid to your reference.</string>
    <string name="edit_activity_string4">Reset photo? Click duck number 4.</string>
    <string name="edit_activity_string5">Need contours? Click duck number 3.</string>
    <string name="edit_activity_string6">Don\'t worry if you can\'t understand bottom filters. Just try.</string>
    <string name="gallery_activity_string1">Choose your awesome photo from gallery. LOAD.</string>
    <string name="author">author: </string>
    <string name="you_may_like">You may like:</string>
    <string name="filters">Filters:</string>
    <string name="wait">wait...</string>
    <string name="image_saved_string">Image saved.</string>
    <string name="cannot_save_string">Cannot save image due to too old version.</string>
</resources>