<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/take_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_string" />

        <Button
            android:id="@+id/choose_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_photo_string" />

        <Button
            android:id="@+id/draft_load_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_draft" />

        <Button
            android:id="@+id/stock_images_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_inspiration" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>