<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FiltersFragment"
    android:id="@+id/filters_fragment_view">


    <ScrollView
        android:id="@+id/filters_list_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/filters"/>

            <Button
                android:id="@+id/greyscale_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greyscale_string" />

            <Button
                android:id="@+id/median_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/median_string" />

            <Button
                android:id="@+id/sharpen_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharpen_string" />

            <Button
                android:id="@+id/pixelize_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pixelize_string" />

            <SeekBar
                android:id="@+id/pixelize_ratio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:min="3"
                android:max="10"
                android:progress="3"/>

            <Button
                android:id="@+id/niblack_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/niblack_string" />

            <SeekBar
                android:id="@+id/niblack_ratio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:min="-2"
                android:max="2"
                android:progress="0"/>

            <SeekBar
                android:id="@+id/niblack_offsetC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:min="-10"
                android:max="10"
                android:progress="0"/>

            <Button
                android:id="@+id/sauvola_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauvola_string" />

            <SeekBar
                android:id="@+id/sauvola_ratio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:min="-1"
                android:max="1"
                android:progress="0"/>

            <SeekBar
                android:id="@+id/sauvola_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:min="-2"
                android:max="2"
                android:progress="0"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>